@@ -4,6 +4,7 @@ Version 0.8.0~dev
 	work on identical DB but different groups.
 	* Limit number of results to commit at the same time (default 50).
 	Configration value is 'limit_commit'.
+	* Allow to limit plugins to several groups.
 
 Version 0.7.0 Released on 2010/04/21
 
